<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventosActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="boton1">onCreate</string>
    <string name="boton2">onStart</string>
    <string name="boton3">onResume</string>
    <string name="boton4">onPause</string>
    <string name="boton5">onRestart</string>
    <string name="boton6">onStop</string>
    <string name="boton7">onDestroy</string>
</resources>
